ゲームエリアを作成

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h3>ブロックくずしー</h3>
+  <div class="game-area">
+    
+  </div>
   <!-- TODO -->
   <script src="brockout.js"></script>
 </body>
