ブロックを追加

--- a/index.html
+++ b/index.html
@@ -1,16 +1,69 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
   <title>ブロック崩し</title>
 </head>
+
 <body>
   <h3>ブロックくずしー</h3>
   <div class="game-area">
-    
+    <div class="top"></div>
+    <div class="brocks-w">
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+    </div>
+    <div class="brocks-w">
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+    </div>
+    <div class="brocks-w">
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+    </div>
+    <div class="brocks-w">
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+    </div>
+    <div class="brocks-w">
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+      <div class="brocks-h"></div>
+    </div>
   </div>
   <!-- TODO -->
   <script src="brockout.js"></script>
 </body>
+
 </html>
