ラケットを追加

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
       <div class="brocks-h"></div>
       <div class="brocks-h"></div>
     </div>
+    <div class="space"></div>
+    <div class="racket"></div>
   </div>
   <!-- TODO -->
   <script src="brockout.js"></script>
