ボールを追加

--- a/index.html
+++ b/index.html
@@ -10,59 +10,64 @@
 <body>
   <h3>ブロックくずしー</h3>
   <div class="game-area">
-    <div class="top"></div>
-    <div class="brocks-w">
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
+    <div class="brocks-and-racket-area">
+      <div class="top"></div>
+      <div class="brocks-w">
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+      </div>
+      <div class="brocks-w">
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+      </div>
+      <div class="brocks-w">
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+      </div>
+      <div class="brocks-w">
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+      </div>
+      <div class="brocks-w">
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+        <div class="brocks-h"></div>
+      </div>
+      <div class="space"></div>
+      <div class="racket"></div>
     </div>
-    <div class="brocks-w">
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
+    <div class="ball-area">
+      <div class="ball"></div>
     </div>
-    <div class="brocks-w">
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-    </div>
-    <div class="brocks-w">
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-    </div>
-    <div class="brocks-w">
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-      <div class="brocks-h"></div>
-    </div>
-    <div class="space"></div>
-    <div class="racket"></div>
   </div>
   <!-- TODO -->
   <script src="brockout.js"></script>
