ボールが縦にだけ動く処理を実装

--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
       <div class="racket"></div>
     </div>
     <div class="ball-area">
-      <div class="ball"></div>
+      <div class="ball" id="ball"></div>
     </div>
   </div>
   <!-- TODO -->
   <script src="brockout.js"></script>
 </body>
-
 </html>
