--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="brocks-h"></div>
       </div>
       <div class="space"></div>
-      <div class="racket"></div>
+      <div class="racket" id="racket"></div>
     </div>
     <div class="ball-area">
       <div class="ball" id="ball"></div>
