操作をするためのボタンを設置

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
       <div class="ball" id="ball"></div>
     </div>
   </div>
+  <div class="control-area">
+    <button id="go-right">←</button>
+    <button id="start-button">start</button>
+    <button id="go-left">→</button>
+  </div>
   <!-- TODO -->
   <script src="brockout.js"></script>
 </body>
