操作エリアのボタンのIDを変更

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     </div>
   </div>
   <div class="control-area">
-    <button id="go-right">←</button>
+    <button id="go-left">←</button>
     <button id="start-button">start</button>
-    <button id="go-left">→</button>
+    <button id="go-right">→</button>
   </div>
   <!-- TODO -->
   <script src="brockout.js"></script>
