brockout.js を breckout.js に変更

--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
     <button id="go-right">→</button>
   </div>
   <!-- TODO -->
-  <script src="brockout.js"></script>
+  <script src="breackout.js"></script>
 </body>
 </html>
