typoを修正 brocks -> blocks

--- a/index.html
+++ b/index.html
@@ -10,57 +10,57 @@
 <body>
   <h3>ブロックくずしー</h3>
   <div class="game-area">
-    <div class="brocks-and-racket-area">
+    <div class="blocks-and-racket-area">
       <div class="top"></div>
-      <div class="brocks-w">
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
+      <div class="blocks-w">
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
       </div>
-      <div class="brocks-w">
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
+      <div class="blocks-w">
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
       </div>
-      <div class="brocks-w">
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
+      <div class="blocks-w">
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
       </div>
-      <div class="brocks-w">
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
+      <div class="blocks-w">
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
       </div>
-      <div class="brocks-w">
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
-        <div class="brocks-h"></div>
+      <div class="blocks-w">
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
+        <div class="blocks-h"></div>
       </div>
       <div class="space"></div>
       <div class="racket" id="racket"></div>
