--- a/index.html
+++ b/index.html
@@ -13,54 +13,54 @@
     <div class="blocks-and-racket-area">
       <div class="top"></div>
       <div class="blocks-w">
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
+        <div class="blocks-h" id="blocksID0-0"></div>
+        <div class="blocks-h" id="blocksID0-1"></div>
+        <div class="blocks-h" id="blocksID0-2"></div>
+        <div class="blocks-h" id="blocksID0-3"></div>
+        <div class="blocks-h" id="blocksID0-4"></div>
+        <div class="blocks-h" id="blocksID0-5"></div>
+        <div class="blocks-h" id="blocksID0-6"></div>
+        <div class="blocks-h" id="blocksID0-7"></div>
       </div>
       <div class="blocks-w">
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
+        <div class="blocks-h" id="blocksID1-0"></div>
+        <div class="blocks-h" id="blocksID1-1"></div>
+        <div class="blocks-h" id="blocksID1-2"></div>
+        <div class="blocks-h" id="blocksID1-3"></div>
+        <div class="blocks-h" id="blocksID1-4"></div>
+        <div class="blocks-h" id="blocksID1-5"></div>
+        <div class="blocks-h" id="blocksID1-6"></div>
+        <div class="blocks-h" id="blocksID1-7"></div>
       </div>
       <div class="blocks-w">
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
+        <div class="blocks-h" id="blocksID2-0"></div>
+        <div class="blocks-h" id="blocksID2-1"></div>
+        <div class="blocks-h" id="blocksID2-2"></div>
+        <div class="blocks-h" id="blocksID2-3"></div>
+        <div class="blocks-h" id="blocksID2-4"></div>
+        <div class="blocks-h" id="blocksID2-5"></div>
+        <div class="blocks-h" id="blocksID2-6"></div>
+        <div class="blocks-h" id="blocksID2-7"></div>
       </div>
       <div class="blocks-w">
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
+          <div class="blocks-h" id="blocksID3-0"></div>
+          <div class="blocks-h" id="blocksID3-1"></div>
+          <div class="blocks-h" id="blocksID3-2"></div>
+          <div class="blocks-h" id="blocksID3-3"></div>
+          <div class="blocks-h" id="blocksID3-4"></div>
+          <div class="blocks-h" id="blocksID3-5"></div>
+          <div class="blocks-h" id="blocksID3-6"></div>
+          <div class="blocks-h" id="blocksID3-7"></div>
       </div>
       <div class="blocks-w">
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
-        <div class="blocks-h"></div>
+          <div class="blocks-h" id="blocksID4-0"></div>
+          <div class="blocks-h" id="blocksID4-1"></div>
+          <div class="blocks-h" id="blocksID4-2"></div>
+          <div class="blocks-h" id="blocksID4-3"></div>
+          <div class="blocks-h" id="blocksID4-4"></div>
+          <div class="blocks-h" id="blocksID4-5"></div>
+          <div class="blocks-h" id="blocksID4-6"></div>
+          <div class="blocks-h" id="blocksID4-7"></div>
       </div>
       <div class="space"></div>
       <div class="racket" id="racket"></div>
